[package]
name = "bc-tags"
version = "0.6.0"
edition = "2024"
description = "Blockchain Commons CBOR Tags"
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/bc-tags-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/bc-tags"
keywords = [
    "encoding",
    "cbor",
    "binary",
    "format",
    "serialization",
] # Up to five
categories = ["data-structures", "encoding"] # https://crates.io/category_slugs

[dependencies]
dcbor = "^0.23.0"
paste = "^1.0.12"
